fix for bug #20209 (appending text nodes leads to segfaults sometimes)